--- a/ads-wizz/src/app/ads-header/ads-header.component.scss
+++ b/ads-wizz/src/app/ads-header/ads-header.component.scss
@@ -1,3 +1,7 @@
+.row {
+  height: 80px;
+}
+
 :host {
   .header,
   input[type="text"] {
@@ -5,32 +9,25 @@
     color: white;
   }
 
-  .menus {
-    display: flex;
-    flex: row wrap;
+  .banner {
+    padding-left: 10px;
   }
 
-  .item {
-    flex-basis: 20%;
-    padding: 20px;
+  a {
     color: #cfbaff;
+    font-size: 20px;
+    font-weight: 600;
   }
 
   a:hover {
     color: white;
     cursor: pointer;
-    border-bottom: 2px solid white;
+    // border-bottom: 2px solid white;
   }
 
-  .user-info {
+  .user {
     display: flex;
-    flex: row wrap;
-    justify-content: space-between;
-  }
-
-  .user-item {
-    flex-basis: 30%;
-    color: white;
-    padding-right: 5px;
+    flex-direction: column;
+    padding-left: 10px;
   }
 }
