--- a/ads-wizz/src/app/ads-table/ads-table.component.html
+++ b/ads-wizz/src/app/ads-table/ads-table.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <div class="col12 container">
+<div class="row">
+    <div class="col12 row">
         <span class="col4"> Object Name</span>
         <span class="col2"> Metric 1</span>
         <span class="col2"> Metric 2</span>
@@ -7,7 +7,7 @@
         <span class="col2"> Metric 4</span>
     </div>
     <div class="col12">
-        <div class="container row" *ngFor="let row of data">
+        <div class="row table-row" *ngFor="let row of data">
             <span class="col4"> {{row.objName}}</span>
             <span class="col2">{{row.m1}}</span>
             <span class="col2"> {{row.m2}}</span>
