--- a/ads-wizz/src/app/app.component.scss
+++ b/ads-wizz/src/app/app.component.scss
@@ -1,10 +1,19 @@
 ::ng-deep {
   .container {
-    display: flex;
-    flex: row wrap;
-    justify-content: space-between;
     height: 80px;
+  }
+
+  .row {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 2%;
     align-items: center;
+  }
+
+  @for $i from 1 through 12 {
+    .col#{$i} {
+      grid-column: span $i;
+    }
   }
 }
 
