--- a/ads-wizz/src/app/ads-header/ads-header.component.scss
+++ b/ads-wizz/src/app/ads-header/ads-header.component.scss
@@ -1,33 +1,41 @@
-.row {
-  height: 80px;
-}
-
 :host {
-  .header,
-  input[type="text"] {
+  .header {
     background-color: #631dff;
     color: white;
+
+    input[type="text"] {
+      background-color: #631dff;
+      color: white;
+    }
+    .banner {
+      padding-left: 10px;
+    }
+    a {
+      color: #cfbaff;
+      font-size: 20px;
+      font-weight: 600;
+    }
+
+    a:hover {
+      color: white;
+      cursor: pointer;
+      // border-bottom: 2px solid white;
+    }
+
+    .user {
+      display: flex;
+      flex-direction: column;
+      padding-left: 10px;
+    }
   }
 
-  .banner {
-    padding-left: 10px;
-  }
+  .sub-header {
+    box-shadow: 1px 5px whitesmoke;
+    color: gray;
 
-  a {
-    color: #cfbaff;
-    font-size: 20px;
-    font-weight: 600;
-  }
-
-  a:hover {
-    color: white;
-    cursor: pointer;
-    // border-bottom: 2px solid white;
-  }
-
-  .user {
-    display: flex;
-    flex-direction: column;
-    padding-left: 10px;
+    a:hover {
+      color: black;
+      cursor: pointer;
+    }
   }
 }
