--- a/ads-wizz/src/app/ads-filter/ads-filter.component.scss
+++ b/ads-wizz/src/app/ads-filter/ads-filter.component.scss
@@ -6,12 +6,12 @@
     justify-content: space-between;
     height: 160px;
     align-items: center;
+    padding: 0 15px;
   }
 
   .title-section {
     display: flex;
     flex-direction: column;
-    padding-left: 20px;
   }
 
   .title {
