--- a/ads-wizz/src/app/ads-table/ads-table.component.html
+++ b/ads-wizz/src/app/ads-table/ads-table.component.html
@@ -2,17 +2,25 @@
 
 <section class="row" *ngIf="data?.length; else noData">
     <div class="col12 row">
-        <a [ngClass]="getCssClass('bold col3', sortType.name)" (click)="sort(sortType.name)"> Object Name</a>
-        <a [ngClass]="getCssClass('bold col2', sortType.metric1)" (click)="sort(sortType.metric1)"
-            style="text-align: center;"> Metric 1</a>
-        <a [ngClass]="getCssClass('col2 bold right-align', sortType.metric2)" (click)="sort(sortType.metric2)">
+        <a class="bold col3" (click)="sort(sortType.name)">
+            Object Name
+            <mat-icon style="color: blue">{{getIcon(sortType.name)}}</mat-icon>
+        </a>
+        <a class="bold col2" (click)="sort(sortType.metric1)" style="text-align: center;">
+            Metric 1
+            <mat-icon>{{getIcon(sortType.metric1)}}</mat-icon>
+        </a>
+        <a class="col2 bold right-align" (click)="sort(sortType.metric2)">
             Metric 2
+            <mat-icon>{{getIcon(sortType.metric2)}}</mat-icon>
         </a>
-        <a [ngClass]="getCssClass('col2 bold right-align', sortType.metric3)" (click)="sort(sortType.metric3)">
+        <a class="col2 bold right-align" (click)="sort(sortType.metric3)">
             Metric 3
+            <mat-icon>{{getIcon(sortType.metric3)}}</mat-icon>
         </a>
-        <a [ngClass]="getCssClass('col2 bold right-align', sortType.metric4)" (click)="sort(sortType.metric4)">
+        <a class="col2 bold right-align" (click)="sort(sortType.metric4)">
             Metric 4
+            <mat-icon>{{getIcon(sortType.metric4)}}</mat-icon>
         </a>
         <a class="col1 bold right-align"> </a>
     </div>
