--- a/ads-wizz/src/app/ads-table/ads-table.component.html
+++ b/ads-wizz/src/app/ads-table/ads-table.component.html
@@ -2,19 +2,21 @@
 
 <section class="row" *ngIf="data?.length; else noData">
     <div class="col12 row">
-        <a class="bold col3" (click)="sort(sortType.name)">
+        <a [ngClass]="{'bold col3': true, 'active': isSorted(sortType.name)}" (click)="sort(sortType.name)">
             Object Name
-            <mat-icon style="color: blue">{{getIcon(sortType.name)}}</mat-icon>
+            <mat-icon>{{getIcon(sortType.name)}}</mat-icon>
         </a>
-        <a class="bold col2" (click)="sort(sortType.metric1)" style="text-align: center;">
+        <a [ngClass]="{'bold col2': true, 'active': isSorted(sortType.metric1)}" (click)="sort(sortType.metric1)"
+            style="text-align: center;">
             Metric 1
             <mat-icon>{{getIcon(sortType.metric1)}}</mat-icon>
         </a>
-        <a class="col2 bold right-align" (click)="sort(sortType.metric2)">
+        <a [ngClass]="{'col2 bold right-align', 'active': isSorted(sortType.metric2)}" (click)="sort(sortType.metric2)">
             Metric 2
             <mat-icon>{{getIcon(sortType.metric2)}}</mat-icon>
         </a>
-        <a class="col2 bold right-align" (click)="sort(sortType.metric3)">
+        <a [ngClass]="{'col2 bold right-align': true, 'active': isSorted(sortType.metric3)}"
+            (click)="sort(sortType.metric3)">
             Metric 3
             <mat-icon>{{getIcon(sortType.metric3)}}</mat-icon>
         </a>
