--- a/ads-wizz/src/app/ads-table/ads-table.component.scss
+++ b/ads-wizz/src/app/ads-table/ads-table.component.scss
@@ -21,8 +21,13 @@
 
   section {
     padding: 0 20px;
-    height: 500px;
+
     overflow-y: hidden;
+  }
+
+  .container {
+    height: 500px;
+    overflow-y: scroll;
   }
 
   .bold {
